--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	============================================= -->
 	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700|Roboto:300,400,500,700" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
-	<link rel="stylesheet" href="../style.css" type="text/css" />
+	<link rel="stylesheet" href="css/style.css" type="text/css" />
 
 	<!-- One Page Module Specific Stylesheet -->
-	<link rel="stylesheet" href="onepage.css" type="text/css" />
+	<link rel="stylesheet" href="css/onepage.css" type="text/css" />
 	<!-- / -->
 
 	<link rel="stylesheet" href="/css/dark.css" type="text/css" />
