--- a/careers.html
+++ b/careers.html
@@ -9,21 +9,21 @@
 	============================================= -->
 	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700|Roboto:300,400,500,700" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
-	<link rel="stylesheet" href="../style.css" type="text/css" />
+	<link rel="stylesheet" href="/style.css" type="text/css" />
 
 	<!-- One Page Module Specific Stylesheet -->
 	<link rel="stylesheet" href="onepage.css" type="text/css" />
 	<!-- / -->
 
-	<link rel="stylesheet" href="../css/dark.css" type="text/css" />
-	<link rel="stylesheet" href="../css/font-icons.css" type="text/css" />
+	<link rel="stylesheet" href="/css/dark.css" type="text/css" />
+	<link rel="stylesheet" href="/css/font-icons.css" type="text/css" />
 	<link rel="stylesheet" href="css/et-line.css" type="text/css" />
-	<link rel="stylesheet" href="../css/animate.css" type="text/css" />
-	<link rel="stylesheet" href="../css/magnific-popup.css" type="text/css" />
+	<link rel="stylesheet" href="/css/animate.css" type="text/css" />
+	<link rel="stylesheet" href="/css/magnific-popup.css" type="text/css" />
 
 	<link rel="stylesheet" href="css/fonts.css" type="text/css" />
 
-	<link rel="stylesheet" href="../css/responsive.css" type="text/css" />
+	<link rel="stylesheet" href="/css/responsive.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="shortcut icon" type="image/x-icon" href="hash.ico" />
 
