--- a/index.html
+++ b/index.html
@@ -25,12 +25,18 @@
 
 	<link rel="stylesheet" href="/css/responsive.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="shortcut icon" type="image/x-icon" href="hash.ico" />
+	<link rel="shortcut icon" type="image/x-icon" href="hash.ico" />
 
 	<!-- Document Title
 	============================================= -->
 	<title>#include</title>
-
+	<script>
+		window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};
+		ga('create', 'UA-XXXXX-Y', 'auto');
+		ga('set', 'transport', 'beacon');
+		ga('send', 'pageview');
+	</script>
+	<script async src="https://www.google-analytics.com/analytics.js"></script>
 </head>
 
 <body class="stretched side-push-panel">
@@ -503,8 +509,6 @@
 			});
 
 		});
-
-	</script>
 
 </body>
 </html>
