--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<title>#include</title>
 	<script>
 		window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};
-		ga('create', 'UA-XXXXX-Y', 'auto');
+		ga('create', 'UA-96211652-1', 'auto');
 		ga('set', 'transport', 'beacon');
 		ga('send', 'pageview');
 	</script>
