removed dead link to page that has not been completed yet

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 									</span>
 								</h1>
 							</div>
-							<a href="omw.html" class="button button-border button-light button-rounded"  data-easing="easeInOutExpo" data-speed="1250" data-offset="70">Meet the team</a>
+<!-- 							<a href="omw.html" class="button button-border button-light button-rounded"  data-easing="easeInOutExpo" data-speed="1250" data-offset="70">Meet the team</a> -->
 						</div>
 					</div>
 
