realigned the icon-grid

--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@
 
 					<div class="common-height clearfix">
 
-						<div class="col-md-4 hidden-xs" style="background: url('../images/services/main-bg.jpg') center center no-repeat; background-size: cover;"></div>
-						<div class="col-md-8">
+<!-- 						<div class="col-md-4 hidden-xs" style="background: url('../images/services/main-bg.jpg') center center no-repeat; background-size: cover;"></div> -->
+						<div class="col-md-12">
 							<div class="max-height">
 								<div class="row common-height grid-border clearfix">
 									<div class="col-md-4 col-sm-6 col-padding">
