--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<i class="icon-facebook"></i>
 				</a>
 
-				<a href="#" class="social-icon si-small si-colored si-github" title="Github">
+				<a href="https://github.com/includedavis/" class="social-icon si-small si-colored si-github" title="Github">
 					<i class="icon-github"></i>
 					<i class="icon-github"></i>
 				</a>
