--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							<li><a href="#" data-href="#section-works"><div>Projects</div></a></li>
 							<li><a href="#" data-href="#section-services"><div>Services</div></a></li>
 							<li><a href="#" data-href="#section-blog"><div>Events</div></a></li>
-							<li><a href="#" data-href="#section-contact"><div>Contact</div></a></li>
+
 						</ul>
 
 						<div id="side-panel-trigger" class="side-panel-trigger"><a href="#"><i class="icon-reorder"></i></a></div>
@@ -209,13 +209,13 @@
 
 						<article class="portfolio-item pf-media pf-icons wide">
 							<div class="portfolio-image">
-								<a href="#">
+								<a href="http://farmdavis.org/">
 									<img src="images/portfolio/mixed/1.jpg" alt="Open Imagination">
 								</a>
 								<div class="portfolio-overlay">
 									<div class="portfolio-desc">
-										<h3><a href="#">FARM Davis</a></h3>
-										<span><a href="#">Davis</a>, <a href="#">CA</a></span>
+										<h3><a href="http://farmdavis.org/">FARM Davis</a></h3>
+										<span><a href="http://farmdavis.org/">Davis</a>, <a href="http://farmdavis.org/">CA</a></span>
 									</div>
 								</div>
 							</div>
@@ -223,13 +223,13 @@
 
 						<article class="portfolio-item pf-illustrations">
 							<div class="portfolio-image">
-								<a href="#">
+								<a href="http://www.suicidepreventionyolocounty.org/">
 									<img src="images/portfolio/mixed/2.jpg" alt="Locked Steel Gate">
 								</a>
 								<div class="portfolio-overlay">
 									<div class="portfolio-desc">
-										<h3><a href="#">Suicide Prevention Of Yolo County</a></h3>
-										<span><a href="#">Davis, CA</a></span>
+										<h3><a href="http://www.suicidepreventionyolocounty.org/">Suicide Prevention Of Yolo County</a></h3>
+										<span><a href="http://www.suicidepreventionyolocounty.org/">Davis, CA</a></span>
 									</div>
 								</div>
 							</div>
@@ -237,13 +237,13 @@
 
 						<article class="portfolio-item pf-graphics pf-uielements">
 							<div class="portfolio-image">
-								<a href="#">
+								<a href="http://www.gridalternatives.org/">
 									<img src="images/portfolio/mixed/3.jpg" alt="Mac Sunglasses">
 								</a>
 								<div class="portfolio-overlay">
 									<div class="portfolio-desc">
-										<h3><a href="#">Solar Grid Alternatives</a></h3>
-										<span><a href="#">North Valley</a>, <a href="#">CA</a></span>
+										<h3><a href="http://www.gridalternatives.org/">Solar Grid Alternatives</a></h3>
+										<span><a href="http://www.gridalternatives.org/">North Valley</a>, <a href="http://www.gridalternatives.org/">CA</a></span>
 									</div>
 								</div>
 							</div>
