Let Me See More commented out
Dead end buttons

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
 					</div><!-- #portfolio end -->
 
-					<div class="topmargin center"><a href="omw.html" class="button button-border button-circle t600">let me see more</a></div>
+				<!--	<div class="topmargin center"><a href="omw.html" class="button button-border button-circle t600">let me see more</a></div> -->
 
 				</div>
 
